--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="shortcut icon" href="https://c.s-microsoft.com/favicon.ico?v2" />
 <title>Temperature converter</title>
-<link rel="manifest" href="/manifest.json">
+<link rel="manifest" href="./manifest.json">
 <link rel="stylesheet" href="converter.css">
 </head>
 <body>
@@ -28,4 +28,9 @@
 unit">68 F</output>
 </form><script src="converter.js"></script></h1>
 </body>
+<script>
+if('serviceWorker' in navigator) {
+navigator.serviceWorker.register('./sw.js', { scope: '/' });
+}
+</script>
 </html>
