--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="converter.css">
 </head>
 <body>
-<h1><form id="converter">
+<h1><form id="converter"></form>
 <label for="input-temp">temperature</label>
 <input type="text" id="input-temp" name="input-temp" value="20" />
 <label for="input-unit">from</label>
