Fix HTML formatting and ensure proper structure

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="shortcut icon" href="https://c.s-microsoft.com/favicon.ico?v2" />
 <title>Temperature converter</title>
-<link rel="manifest" href="./manifest.json">
+<link rel="manifest" href="manifest.json">
 <link rel="stylesheet" href="converter.css">
 </head>
 <body>
@@ -33,4 +33,5 @@ if('serviceWorker' in navigator) {
 navigator.serviceWorker.register('./sw.js', { scope: '/' });
 }
 </script>
+
 </html>
